--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.4",
-    "@react-navigation/native": "^5.9.7",
+    "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.5",
     "expo": "~42.0.1",
     "expo-constants": "^11.0.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-location": "~12.1.2",
+    "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "react": "16.13.1",
